--- a/dashboard/views/login.html
+++ b/dashboard/views/login.html
@@ -18,26 +18,48 @@
       crossorigin="anonymous"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
     <title >Safety Floater Login</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid h-100">
       <div class="container">
         
-
         <div id="app">
-			
-				
-				LOGIN -- AGGIUNGERE LA FORM DI LOGIN QUI	
-			
-				<a class="btn btn-success" href="/violations" role="button">Login</a>
-                    
+          
+            <div class="row mb-5 mt-5 justify-content-center">
+              <h1>Safety Floater Contol Panel</h1>
+            </div>
+            <div class="row mb-3 mt-3 justify-content-center">
+              <h1>Login:</h1>
+            </div>
+            
+          
+          <div class="row justify-content-center align-items-center h-100">
+            
+            <div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">
+             
+              <form action="/login-request" method="post" class="loginForm">
+                <div class="form-group">
+                  <label for="username">Username</label>
+                  <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+
+            </div>
+
+          </div>
+          
         </div>   <!-- APP CLOSED -->
 
-      </div>     <!-- CONTAINER CLOSED -->
+      </div>    <!-- CONTAINER CLOSED -->
     </div>       <!-- CONTAINER FLUID CLOSED -->
  
 <script>
