--- a/dashboard/views/violations.html
+++ b/dashboard/views/violations.html
@@ -7,11 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
     <script type="text/javascript" language="javascript"></script>
-    <script>
-      if ((localStorage.getItem("Logged") != true )) {
-            window.location = "http://localhost:8080/";
-          }
-    </script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -99,9 +94,14 @@
               viewMode: true,
               infoMode: false,  
               mapUrl:""
-				      },
+		    },
             
             beforeCreate: function(){
+				
+				if ((localStorage.getItem("Logged") != "true" )) {
+					window.location = "http://localhost:8080/";
+				}
+			
             
 				    this.$http.get('http://localhost:8080/AllViolations').then(response => 
             {
