added localStorage usage for login check

--- a/dashboard/views/login.html
+++ b/dashboard/views/login.html
@@ -76,13 +76,7 @@
             
             beforeCreate: function(){
             
-				/*this.$http.get('http://localhost:8080/url_rotta_login').then(response => {
-					
-				   console.log(response.body);
-
-				}, response => {
-					// error callback
-				})*/
+				localStorage.Logged = "false";
                 
             },
 
