--- a/dashboard/views/redirect_to_violations.html
+++ b/dashboard/views/redirect_to_violations.html
@@ -52,7 +52,18 @@
             
 				localStorage.Logged = "true";
 				
-				window.location = "http://localhost:8080/violations/";
+				this.$http.post('http://localhost:8080/setLogged', {
+				  logged: localStorage.getItem("Logged")
+				})
+				.then(response => {
+				  console.log(response);
+				  window.location = "http://localhost:8080/violations/";
+				},
+				response => {
+				  console.log(response);	
+				}
+				
+				)
                 
             },
 
