--- a/dashboard/views/login.html
+++ b/dashboard/views/login.html
@@ -77,6 +77,18 @@
             beforeCreate: function(){
             
 				localStorage.Logged = "false";
+				
+				this.$http.post('http://localhost:8080/setLogged', {
+				  logged: localStorage.getItem("Logged")
+				})
+				.then(response => {
+				  console.log(response);
+				},
+				response => {
+				  console.log(response);	
+				}
+				
+				)
                 
             },
 
