--- a/dashboard/views/violations.html
+++ b/dashboard/views/violations.html
@@ -24,7 +24,9 @@
     <div class="container-fluid">
       <div class="container">
         <div id="app">
-          <div class="card mt-5">
+         <button class="btn btn-danger mt-3" @click="Logout()">Logout</button>
+          <div class="card mt-2">
+            
             <div class="card-title mt-2">
               <center>
                 <h4 class="mt-4"><b>Violations Detected</b></h4>  
@@ -139,6 +141,11 @@
             },
 
             methods: {
+              Logout:function()
+              {
+                localStorage.Logged = "false";
+                window.location = "http://localhost:8080/";
+              },
 
             getMap: function(lat,long){
            this.mapUrl="https://maps.geoapify.com/v1/staticmap?style=osm-carto&width=600&height=400&center=lonlat:"+lat+","+long+"&zoom=8&marker=lonlat:"+lat+","+long+";color:%23ff0000;size:medium;text:1&apiKey=0ad69017c7e7462b99ee1e5d0fa90db4"
