--- a/dashboard/views/violations.html
+++ b/dashboard/views/violations.html
@@ -148,7 +148,7 @@
               },
 
             getMap: function(lat,long){
-           this.mapUrl="https://maps.geoapify.com/v1/staticmap?style=osm-carto&width=600&height=400&center=lonlat:"+lat+","+long+"&zoom=8&marker=lonlat:"+lat+","+long+";color:%23ff0000;size:medium;text:1&apiKey=0ad69017c7e7462b99ee1e5d0fa90db4"
+           this.mapUrl="https://maps.geoapify.com/v1/staticmap?style=osm-carto&width=600&height=400&center=lonlat:"+long+","+lat+"&zoom=8&marker=lonlat:"+long+","+lat+";color:%23ff0000;size:medium;text:1&apiKey=0ad69017c7e7462b99ee1e5d0fa90db4"
       
           },
             getData: function()
